added index.js file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
 	<link rel="stylesheet" type="text/css" href="index.css" >
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+	<script
+  	src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  	integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  	crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Patua+One|Sumana|Teko" rel="stylesheet">
 </head>
 <body>
@@ -15,9 +19,9 @@
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
 				<h2 class="subtitle">Fullstack developer | Lifelong learner | Divergent Thinker</h2>
 				<div class="nav_buttons">
-					<button class= "btn btn-primary button_link">About Me</button>
-					<button class= "btn btn-danger button_link">My Projects</button>
-					<button class="btn btn-success button_link">Contact Me</button>
+					<button class= "btn btn-primary button_link about_me_button">About Me</button>
+					<button class= "btn btn-danger button_link my_projects_button">My Projects</button>
+					<button class="btn btn-success button_link contact_me_button">Contact Me</button>
 				</div>
 			</div>
 		</section>
@@ -116,4 +120,5 @@
 	</main>
 	<footer>Check out the rest of my code on <i class="fab fa-github"></i></footer>
 </body>
+<script src="index.js"></script>
 </html>
