--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="index.css" >
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<script
-  	src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  	integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-  	crossorigin="anonymous"></script>
+	  src="https://code.jquery.com/jquery-3.3.1.min.js"
+	  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	  crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Patua+One|Sumana|Teko" rel="stylesheet">
 </head>
 <body>
