added scroll animation for projects section

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 			<h2 class="my_projects_header"><i class="fab fa-medapps"></i> <span class="project_span_title">My Projects </span> <i class="fab fa-medapps"></i></h2>
 			<div class= "project_sidebar">
 				<!-- On Click brings you to the projects -->
-				<a href="#"><p>Now Playing</p></a>
-				<a href="#"><p>Mark It</p></a>
-				<a href="#"><p>Checkpoint</p></a>
+				<p>Now Playing <span class="now_playing_button"><i class="anchor_color fas fa-angle-double-right"></i></span></p>
+				<p>Mark It <span class="mark_it_button"><i class="anchor_color fas fa-angle-double-right"></i></span></p>
+				<p>Checkpoint <span class="checkpoint_button"><i class="anchor_color fas fa-angle-double-right"></i></span></p>
 			</div>
 			<hr class="style2">
-			<div class="project_1_info"> 
+			<div class="now_playing_info"> 
 				<h3 class="project_title">Now Playing</h3>
 				<div class="image_container">
 					<img class="project_screenshot" width= "80%" src="./images/Now-Playing-App.png" alt="now_playing_scrnsht">
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<hr class="style2">
-			<div class="project_2_info"> 
+			<div class="mark_it_info"> 
 				<h3 class="project_title left">Mark It</h3>
 				<div class="image_container right">
 					<img class="project_screenshot" width= "80%" src="./images/Mark-It-App.png" alt="mark_it_scrnsht">
@@ -83,7 +83,7 @@
 					</div>
 				</div>
 			<hr class="style2">
-			<div class="project_3_info"> 
+			<div class="checkpoint_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
 				<div class="image_container reduced">
 					<img class="project_screenshot" width= "80%" src="./images/checkpoint3.png" alt="checkpoint_scrnsht">
