added hyperlink to footer

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			
 		</section>
 	</main>
-	<footer>Check out the rest of my code on <i class="fab fa-github"></i></footer>
+	<footer>Check out the rest of my code on <a href= "https://github.com/atakori" ><i class="fab fa-github"></i></a></footer>
 </body>
 <script src="index.js"></script>
 </html>
