added accessibility roles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang= "en">
 <head>
 	<title>Alfredo Takori Portfolio</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
 	<link rel="stylesheet" type="text/css" href="index.css" >
@@ -13,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Patua+One|Sumana|Teko" rel="stylesheet">
 </head>
 <body>
-	<header>
+	<header role="banner">
 		<section class="welcome_section">
 			<div class="inner_container">
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
@@ -118,7 +119,7 @@
 			
 		</section>
 	</main>
-	<footer>Check out the rest of my code on <a href= "https://github.com/atakori" ><i class="fab fa-github"></i></a></footer>
+	<footer role="contentinfo">Check out the rest of my code on <a href= "https://github.com/atakori" ><i class="fab fa-github"></i></a></footer>
 </body>
 <script src="index.js"></script>
 </html>
