fixed mobile responsive header issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<section class="welcome_section">
 			<div class="inner_container">
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
-				<h2 class="subtitle">Fullstack developer | Lifelong learner | Divergent Thinker</h2>
+				<h2 class="subtitle">Fullstack developer | Lifelong learner </h2>
 				<div class="nav_buttons">
 					<button class= "btn btn-primary button_link about_me_button">About Me</button>
 					<button class= "btn btn-danger button_link my_projects_button">My Projects</button>
