updated linkedIn link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<p class="blue_anchor_font">Feel free to reach out to me or view more of my code through the following links</p>
 					<div class= "contact_links_container">
 						<a href="mailto:atakori@outlook.com"><i class="contact_icon fa-4x fas fa-envelope fa"></i></a>
-						<a href="https://www.linkedin.com/in/alfredo-takori-966a53b3/"><i class="contact_icon fa-4x fab fa-linkedin"></i></a>
+						<a href="https://www.linkedin.com/in/alfredo-takori/"><i class="contact_icon fa-4x fab fa-linkedin"></i></a>
 						<a href= "https://github.com/atakori" ><i class="contact_icon fa-4x fab fa-github"></i></a>
 					</div>
 					</div>
