made grammar edits and modified about me styling

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<span class="section_divider"><hr></span>
 			<div class="about_me_info"> 
 				<h2 class="about_me_title section_title">About Me</h2>
-				<div class="image_container"><img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi"> </div>
-				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
+				<div class="image_container avatar_container"><img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi"> </div>
+				<p class="about_me_description"> I am a full-stack developer and recent graduate of the Full Stack Engineering program at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
 		<span class="section_divider"><hr></span>
@@ -70,7 +70,7 @@
 				<div class="image_container right">
 					<img class="project_screenshot" width= "80%" src="./images/Mark-It-App.png" alt="mark_it_scrnsht">
 				</div>
-				<p class="project_description left">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
+				<p class="project_description left">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the administrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
 				<div class= "technologies_list">
 				<h4 class="tech_title">Technologies Used</h4>
 					<p><strong>Front-End:</strong> HTML5, CSS, Javascript, jQuery </p>
